--- a/config-data/empleado-service.yaml
+++ b/config-data/empleado-service.yaml
@@ -1,9 +1,10 @@
 server:
   port: 8083
-datasource:
-  url: jdbc:mysql://localhost:3306/MSTGO_Empleados
-  username: root
-  password: password&1234
-jpa:
-  hibernate:
-    ddl-auto: update
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/MSTGO_Empleados
+    username: root
+    password: password&1234
+  jpa:
+    hibernate:
+      ddl-auto: update
