--- a/config-data/empleado-service.yaml
+++ b/config-data/empleado-service.yaml
@@ -2,9 +2,18 @@ server:
   port: 8083
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/MSTGO_Empleados
-    username: root
-    password: password&1234
+    driverClassName: com.mysql.jdbc.Driver
+    url: "jdbc:mysql://localhost:3306/MSTGO_Empleados"
+    username: "root"
+    password: "password&1234"
+    testOnBorrow: true
+    testWhileIdle: true
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 30000
+    validationQuery: SELECT 1
+    max-active: 15
+    max-idle: 10
+    max-wait: 8000
   jpa:
     hibernate:
       ddl-auto: update
