--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -8,3 +8,7 @@ spring:
           uri: http://localhost:8083
           predicates:
             - Path=/empleado/**
+        - id: marcaje-service
+          uri: http://localhost:8086
+          predicates:
+            - Path=/marcaje/**
