--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -3,6 +3,14 @@ server:
 spring:
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          "[/**]":
+            allowedOrigins: "http://localhost:3000"
+            allowedHeaders: "*"
+            allowedMethods:
+              - GET
+              - POST
       routes:
         - id: empleado-service
           uri: http://localhost:8083
