--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -28,3 +28,7 @@ spring:
           uri: http://localhost:8085
           predicates:
             - Path=/justificativo/**
+        - id: oficinaRRHH-service
+          uri: http://localhost:8087
+          predicates:
+            - Path=/sueldos/**
