--- a/config-data/oficinaRRHH-service.yaml
+++ b/config-data/oficinaRRHH-service.yaml
@@ -1,6 +1,8 @@
 server:
   port: 8087
 spring:
+  main:
+    web-application-type: reactive
   datasource:
     url: jdbc:mysql://localhost:3306/MSTGO_OficinaRRHH
     username: root
