Update gateway and oficinaRRHH services .yaml

--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -33,3 +33,10 @@ spring:
           uri: http://localhost:8087
           predicates:
             - Path=/sueldos/**
+keycloak:
+  realm: Mueblestgo-realm
+  auth-server-url: http://0.0.0.0:8080
+  resource: springboot-keycloak
+  public-client: true
+  bearer-only: true
+  use-resource-role-mappings: true
