--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -1,8 +1,6 @@
 server:
   port: 8082
 spring:
-  main:
-    allow-bean-definition-overriding: true
   cloud:
     gateway:
       globalcors:
@@ -42,9 +40,9 @@ spring:
           my-keycloak-provider:
             issuer-uri: http://localhost:8080/realms/Mueblestgo
         registration:
-          keycloak-spring-gateway-client:
+          keycloak-spring-gateway-application:
             provider: my-keycloak-provider
-            client-id: spring-gateway-client
+            client-id: spring-gateway-application
             client-secret: DzsR3U05rus2ujb52TOGyUOmKdE74EW3
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/keycloak"
