--- a/config-data/marcaje-service.yaml
+++ b/config-data/marcaje-service.yaml
@@ -2,9 +2,9 @@ server:
   port: 8086
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/MSTGO_Marcajes
-    username: root
-    password: password&1234
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
